# AxiSim-Software

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Concentration Solver Software.vcxproj  Concentration Solver Software.vcxproj.filters  LICENSE  README.md  base_gui.cpp  base_gui.h  bullet.bin.pre-9mm-sketch.bak  bullet.bin.pre-direction-flip.bak  bullet.bin.pre-fired-projectile.bak  camera.cpp  camera.h  cmaps.h  colormap.h  console.h  console_keywords.h  edge.frag  edge.vert  field_manager.cpp  gpu_utils.h  graphics_struct.h  imgui.ini  jacobi_pcg.cu  line.frag  linear_solver.cuh  manage_file.cpp  math_func.cpp  mesh.cpp  mesh.frag  mesh_gui.cpp  mouse_picker.cpp  package-linux.sh  package.ps1  printer.cpp  project2.bin.bak  project2.bin.oldf.bak  project2.bin.pre-cow-axis-repair.bak  (+16 more)
docs/: AxiSim_Software_Manual_v1.04-alpha.tex  AxiSim_Software_Manual_v1.05-alpha.tex  linux-build.md
docs/update logs/: v1.02-alpha update log.md  v1.03-alpha update log.md  v1.04-alpha update log.md
graphics/gui/header/: animation_gui.h  base_gui.h  base_surface_viewer.h  colorbar.h  console.h  geometry_gui.h  inspector.h  menu.h  mesh_gui.h  mesh_inspector.h  residual_plot.h  results_gui.h  scene_view.h  sketch_view.h  solver_gui.h
graphics/gui/source/: animation_gui.cpp  base_gui.cpp  base_surface_viewer.cpp  colorbar.cpp  console.cpp  geometry_gui.cpp  inspector.cpp  menu.cpp  mesh_gui.cpp  mesh_inspector.cpp  residual_plot.cpp  results_gui.cpp  scene_view.cpp  sketch_trim.cpp  sketch_view.cpp  solver_gui.cpp
graphics/shaders/: gizmo.frag  gizmo.vert  inspector.frag  line.vert  mesh.frag  mesh.vert  results.frag  results.vert  results_us.frag  results_us.vert  sketch.frag
graphics/window/header/: axis_gizmo.h  bounding.h  camera.h  display.h  graphics_struct.h  gui.h  mouse_picker.h  renderer.h  scene_view.h  shader.h
graphics/window/source/: axis_gizmo.cpp  bounding.cpp  camera.cpp  display.cpp  gui.cpp  mouse_picker.cpp  renderer.cpp  scene_view.cpp  shader.cpp
manager/header/: boundary_func.h  buffer_manager.h  clipboard.h  colormap.h  colormap_manager.h  field_manager.h  file_manager.h  flag_manager.h  fluid_properties_manager.h  font_manager.h  gpu_utils.h  gui_manager.h  image_writer.h  keyboard_manager.h  manage_file.h  math_func.h  memory_manager.h  pch.h  printer.h  unit_manager.h  video_writer.h
manager/source/: boundary_func.cpp  buffer_manager.cpp  clipboard.cpp  colormap.cpp  field_manager.cpp  file_manager.cpp  image_writer.cpp  manage_file.cpp  math_func.cpp  memory_manger.cpp  printer.cpp  video_writer.cpp
packaging/linux/: AxiSim.desktop  axisim
solver/header/: concentration_equation.cuh  energy_equation.cuh  geometry.h  jacobi_pcg.cuh  linear_solver.cuh  mesh.h  multigrid.cuh  project.h  residuals.cuh  results.h  simple.cuh  solver.h  solver_struct.h  solver_util.cuh
solver/source/: concentration_equation.cu  energy_equation.cu  geometry.cpp  jacobi_pcg.cu  linear_solver.cu  mesh.cpp  multigrid.cu  residuals.cu  results.cpp  simple.cu  solver.cpp  solver_util.cu
src/header/: project.h  setting.cuh
src/source/: main.cu  project.cpp
structs/: app_struct.h  boundary_struct.h  core_struct.h  graphics_struct.h  multiblock.h  sketch_struct.h  solver_struct.h
